force-app/main/default/objects/custom_create37__c/custom_create37__c.object-meta.xml
<CustomObject>
    <label>Custom created object37</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects37</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>