force-app/main/default/objects/custom_create37__c/fields/custom_create_37field572__c.field-meta.xml
<CustomField>
    <fullName>custom_create_37field572__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 37field572</label>
    <type>Checkbox</type>
</CustomField>